--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/main.css">
         <title>Onde está a ISS?</title>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
     </head>
     <body>
         <header>
@@ -13,14 +14,14 @@
         </header>
         <main>
             <section>
-                <div id="mapa-iss">                    
-                </div>
+                <div id="mapa-iss"></div>
                 <ul>
                     <li>Latitude: <span id="lat"></span></li>
                     <li>Longitude: <span id="lng"></span></li>
                 </ul>
             </section>
         </main>
+        <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
         <script src="js/main.js"></script>
     </body>
 </html>
