--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
     </head>
     <body>
-        <header>
-            <h1>Onde está a ISS?</h1>
-        </header>
-        <main>
-            <section>
-                <div id="mapa-iss"></div>
-                <ul>
-                    <li>Latitude: <span id="lat"></span></li>
-                    <li>Longitude: <span id="lng"></span></li>
-                </ul>
-            </section>
-        </main>
+        <div id="container">
+            <header>
+                <h1>ONDE ESTÁ A ISS?</h1>
+            </header>
+            <main>
+                <section>
+                    <div id="mapa-iss"></div>
+                    <ul>
+                        <li>Latitude: <span id="lat"></span></li>
+                        <li>Longitude: <span id="lng"></span></li>
+                    </ul>
+                </section>
+            </main>
+        </div>
         <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
         <script src="js/main.js"></script>
     </body>
